--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
-  "name": "@wangjx/wjx-util",
-  "version": "1.0.0",
+  "name": "@wangjx/util",
+  "version": "0.0.1",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
+  "keywords": [
+    "utils",
+    "format"
+  ],
   "author": "wangjx",
   "license": "ISC",
   "repository": {
