--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "utils",
     "format"
   ],
-  "author": "wangjx",
+  "author": "wangjx2022",
   "license": "ISC",
   "repository": {
     "type": "git",
